cleaned up index.html

--- a/index.html
+++ b/index.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!--//sitemapped!-->
-        <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-V9CJK1382B"></script>
-        <script>
-		    window.dataLayer = window.dataLayer || [];
-		    function gtag(){dataLayer.push(arguments);}
-		    gtag('js', new Date());
-
-		    gtag('config', 'G-V9CJK1382B');
-        </script>
         <title>Random Insult Generator</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,12 +19,12 @@
         <link rel="icon" type="image/jpg" href="images/Nerdee_Birdee_head_icon.jpg" sizes="16x16">
         <link rel="canonical" href="https://nerdeebirdee.com/Insult_Generator/index">
         <style>
-			@font-face {
-				font-family: 'Ubuntu Condensed';
-				font-style: normal;
-				font-weight: 400;
-				src: url('UbuntuCondensed-Regular.ttf') format('ttf');
-			}
+            @font-face {
+		font-family: 'Ubuntu Condensed';
+		font-style: normal;
+		font-weight: 400;
+	        src: url('UbuntuCondensed-Regular.ttf') format('ttf');
+	    }
 
             body {
                 background-color: maroon;
@@ -219,17 +209,17 @@
         
         <div class="container-fluid bg-light d-flex flex-row py-3">
             <div class="col">
-			    <a href="../welcome" role="button" class="btn btn-success">
-				    <img src="../images/Nerdee_Birdee_head_icon.jpg" class="mx-auto" width="30" height="30" alt="NB_logo">
-				    &nbsp;NB.com
-			    </a>
+	        <a href="../welcome" role="button" class="btn btn-success">
+		    <img src="images/Nerdee_Birdee_head_icon.jpg" class="mx-auto" width="30" height="30" alt="NB_logo">
+		    &nbsp;NB.com
+	        </a>
             </div>
         
             <div class="col">
-			    <a href="../NB_Games" role="button" class="btn btn-warning">
-				    <img src="../images/Nerdee_Birdee_head_icon.jpg" class="mx-auto" width="30" height="30" alt="NB_logo">
-				    &nbsp;NB GAMES
-			    </a>
+	        <a href="../NB_Games" role="button" class="btn btn-warning">
+	            <img src="images/Nerdee_Birdee_head_icon.jpg" class="mx-auto" width="30" height="30" alt="NB_logo">
+		    &nbsp;NB GAMES
+	        </a>
             </div>        
         </div>
 
